# game-of-life

./: .gitignore  CMakeLists.txt  README.md
patterns/: glider.txt  glidergun.txt  testboard.txt
src/: Game.cpp  Game.h  GameOfLife.cpp  GameOfLife.h  GetInput.cpp  GetInput.h  Message.cpp  Message.h  Patterns.cpp  Patterns.h  Util.cpp  Util.h  color.h  main.cpp
